| Summary: | ASTERISK-22635: ARI: listing bridges shows bridges that are not part of an ARI application. | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2013-10-02 11:23:44 | Date Closed: | 2013-10-16 09:12:03 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) full.txt | |
| Description: | Made a call using chan_pjsip outside of ARI.
{noformat} exten => 102,1,Dial(PJSIP/${EXTEN},20) same => n,Hangup {noformat} Issued a list active bridges in ARI and it showed the bridge with two channels in it. Sample output: {noformat} [ { "channels": [ "1380811883.0", "1380811883.1" ], "id": "7f1ef016-a1d7-4a4a-b857-f3d921b067de", "technology": "simple_bridge", "bridge_class": "basic", "bridge_type": "mixing" } ] {noformat} | ||
| Comments: | By: Rusty Newton (rnewton) 2013-10-02 20:55:29.420-0500 Please add some debug or example output, along with any specifics about the data used in reproduction of the issue when you get a chance. By: Matt Jordan (mjordan) 2013-10-14 12:46:57.897-0500 You know.... On second thought, I'm not entirely sure this is a bug. You may want to list all bridges in the system, even those you don't own, so that you can subscribe to them via the Applications resource. We should probably discuss it further. By: Kinsey Moore (kmoore) 2013-10-15 15:11:00.955-0500 Just to clarify, if I remember the discussion correctly, the path forward here was to clarify documentation to the effect that all bridges are included in the results of this query and leave the actual functionality alone. By: Matt Jordan (mjordan) 2013-10-16 09:57:08.799-0500 We probably should take this discussion back to the -dev list. I'm not sure reporting all of the channels/bridges in the system is the correct solution here either. | ||